some more updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,11 @@
         "random": "c",
         "istream": "c",
         "limits": "c",
-        "numeric": "c"
+        "numeric": "c",
+        "stdlib.h": "c",
+        "stat.h": "c",
+        "string.h": "c",
+        "time.h": "c",
+        "poll.h": "c"
     }
 }
