--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "string.h": "c",
         "time.h": "c",
         "poll.h": "c",
-        "in.h": "c"
+        "in.h": "c",
+        "socket.h": "c"
     }
 }
